force-app/main/default/objects/OffresConditionnel__mdt/OffresConditionnel__mdt.object-meta.xml
<CustomObject>
    <label>SM Offres conditionnel</label>
    <pluralLabel>Offres conditionnel</pluralLabel>
</CustomObject>