force-app/main/default/objects/OffresConditionnel__mdt/fields/CodeOffre__c.field-meta.xml
<CustomField>
    <fullName>CodeOffre__c</fullName>
    <label>Code offre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>