force-app/main/default/objects/OffresConditionnel__mdt/fields/CodePackage__c.field-meta.xml
<CustomField>
    <fullName>CodePackage__c</fullName>
    <label>Code package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>