force-app/main/default/objects/OffresConditionnel__mdt/fields/NiveauOuvertureService__c.field-meta.xml
<CustomField>
    <fullName>NiveauOuvertureService__c</fullName>
    <label>Niveau ouverture service</label>
    <length>10</length>
    <type>Text</type>
</CustomField>