force-app/main/default/objects/OffresConditionnel__mdt/fields/TypePdl__c.field-meta.xml
<CustomField>
    <fullName>TypePdl__c</fullName>
    <label>Type pdl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>